[package]
name = "data-discovery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util = { path = "../../utility/util" }
# chrono = { version = "0.4.13", features = ["serde"] }
itertools = "0.9.0"
# rand = "0.8.3"
# serde = { version = "1.0.125", features = ["derive"] }
# serde_json = "1.0.64"
